--- a/angularExercises/11Reddit/style.css
+++ b/angularExercises/11Reddit/style.css
@@ -13,6 +13,10 @@ img{
   height:100px;
   width:150px;
 }
+.author{
+  display: inline-block;
+  margin-left: 500px;
+}
 .green{
   color:green;
 }
@@ -24,4 +28,23 @@ img{
 }
 .dropdown-menu{
   margin-right: 55vw;
+}
+.ng-enter{
+    transition: 0.5s ease all;
+    opacity: 0;
+}
+.ng-enter.ng-enter-active{
+    opacity: 1;
+}
+
+.ng-leave{
+    transition: 0.5s ease all;
+    opacity: 1;
+}
+
+.ng-leave.ng-leave-active{
+    opacity: 0;
+}
+.inLine{
+  display:inline-block;
 }
