--- a/angularExercises/unitTwo/meanT/style.css
+++ b/angularExercises/unitTwo/meanT/style.css
@@ -1,12 +1,63 @@
-body{
-  background-color: grey;
+.guarantee{
+  width: 100vw;
+  height:25px;
+  background-color: orange;
+  color: white;
+  text-align: center;
+  line-height: 25px;
 }
-.movieBlocks{
-  color:blue;
-  height: 250x;
-  width: 500px;
+.head{
+  font-size: 50px;
+  color: orange;
+  margin-left: 25px;
+}
+.navBar{
+  background-color: grey;
+  height: 50px;
+  border-size:1px;
+  border-style:solid;
+  border-color:black;
+  margin-left: 20px;
+  margin-right: 20px;
+}
+.inline{
+  display: inline-block;
+}
+.tableTop{
+  height: 30px;
+  border-size:.5px;
+  border-style:solid;
+  margin-left: 20px;
+  margin-right: 20px;
+  margin-bottom: -15px;
+}
+img{
+  width: 250px;
+  height: 250px;
   border-style: solid;
-  border-width: 2px;
-  border-color: red;
+  border-right: thin double black;
+}
+.teaContainer{
+  border-style:solid;
+  border-size:.5px;
+  border-color:black;
+  margin-left: 20px;
+  margin-right: 20px;
   margin-top: 10px;
+  margin-bottom: 10px;
+
+}
+.filters{
+  margin-left: 20px;
+  margin-right: 20px;
+  margin-top: 25px;
+  margin-bottom: 25px;
+}
+#checkout{
+  float:right;
+}
+#sortBy{
+  float:right;
+  width: 20px;
+  margin-right: 20px;
 }
