--- a/angularExercises/unitTwo/meanT/partials/mainPage.html
+++ b/angularExercises/unitTwo/meanT/partials/mainPage.html
@@ -21,14 +21,14 @@
   <div class="inline">Tea</div>
   <div class="inline" id="information">information</div>
   <div class="inline" id="sortBy">
-    <select ng-model="sort">
+    <select ng-model="pricesort">
       <option>No filter</option>
-      <option>Lowest</option>
-      <option>Highest</option>
+      <option value="price">Lowest</option>
+      <option value="-price">Highest</option>
     </select>
  </div>
 </div>
-<div ng-repeat="tea in view.data |orderBy:sort|filter:sort |filter:searchBox ">
+<div ng-repeat="tea in view.data |orderBy:pricesort|filter:sort |filter:searchBox ">
   <div class="teaContainer">
     <div class="inline">
       <img ng-src= '{{tea.imageUrl}}'>
@@ -43,13 +43,13 @@
           <option value='3'>3</option>
           <option value='4'>4</option>
         </select>
-        <button ng-click="view.addToCart(quantity,tea._id)" id="addBag">Add to Bag</button>
+        <button ng-click="view.addToCart(quantity,tea)" id="addBag">Add to Bag</button>
       </div>
-      <div>Price: {{tea.price | currency:"$ "}}</div>
+      <div>Price: {{tea.price /100 | currency:"$ "}}</div>
       <div>Caffeine Scale: {{tea.caffeineScale}}</div>
       <div>Ingredients: {{tea.ingredients}}</div>
       <div>rating: {{tea.rating}}</div>
-      <div>In Stock: {{tea.inStock}}</div>
+      <div>In Stock: {{tea.inStock== true ? "yes" : "no"}}</div>
       <div>Categories:</div>
       <ul>
         <div ng-repeat="cat in tea.categories">
